# attr_property

./: .pre-commit-config.yaml  .tagitrc  README.md  README.rst  attr_property.py  pyproject.toml  setup.py  tox.ini
tests/: readme.py  test_attr_property.py
